--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <title>Universal Ledger Dashboard</title>
+    <h5>
+      Note: Please consider doing reset after few entries, as we are running on
+      limited memory environment
+    </h5>
   </head>
   <body>
     <div id="root"></div>
